<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
     <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:src="@drawable/btn_back"
            android:layout_gravity="center_vertical" />


        <TextView
            android:id="@+id/title"
            style="@style/white20Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:gravity="center"
       	    android:layout_gravity="center" />


        
        <ImageView
            android:id="@+id/rightButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:src="@drawable/add"
            android:layout_gravity="center_vertical|right" />
        
    </FrameLayout>
    
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
   	android:background="@drawable/login_bg">
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:padding="10dp"
         android:orientation="vertical"
         >
    <EditText
        android:id="@+id/nameText"
        style="@style/input"
        android:drawableLeft="@drawable/login_account_icon"
        android:drawablePadding="2dp"
        android:hint="@string/register_name" />
    
    
	 <EditText
	    android:id="@+id/emailText"
	    style="@style/input"
	    android:hint="@string/register_email"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="2dp"
	    android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/pwdText"
        style="@style/input"
        android:drawableLeft="@drawable/login_psd_icon"
        android:drawablePadding="2dp"
        android:hint="@string/register_password"
  
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwdText1"
        style="@style/input"
        android:drawableLeft="@drawable/login_psd_icon"
        android:drawablePadding="2dp"
        android:hint="@string/register_again_password"
        android:inputType="textPassword" />
    
	<!-- <EditText
	    android:id="@+id/phoneText"
	    style="@style/input"
	    android:hint="@string/register_phone"
        android:drawableLeft="@drawable/icon_phone"
        android:drawablePadding="2dp"/> -->




    <Button
        android:id="@+id/registBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn"
        android:text="@string/register_str"
        android:textColor="@color/white" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>