<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            style="@style/white20Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="登录" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <!--
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.d3.d3xmpp.util.CircularImage
                android:id="@+id/headImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
           		android:scaleType="fitXY"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/transparent_background" />

        </LinearLayout>
        -->

        <EditText
            android:id="@+id/nameText"
            style="@style/input"
            android:drawableLeft="@drawable/login_account_icon"
            android:drawablePadding="2dp"
            android:hint="@string/register_name" />

        <EditText
            android:id="@+id/pwdText"
            style="@style/input"
            android:drawableLeft="@drawable/login_psd_icon"
            android:drawablePadding="2dp"
            android:hint="@string/register_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical" >

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/login_check"
                android:checked="false"
                android:text="@string/login_chack" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn"
                    android:text="@string/login_str"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom" >

            <TextView
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
           		android:text="清除痕迹"
                android:textColor="@color/blue"  />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/login_view_no_register_title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/registBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_view_no_register"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>