<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">
    
    <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >



        <TextView
            android:id="@+id/titleView"
            style="@style/white20Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:gravity="center"
       	    android:layout_gravity="center" />


        
    </FrameLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
    <EditText
        android:id="@+id/oldPwdView"
        style="@style/input"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwdView"
        style="@style/input"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwdView1"
       style="@style/input"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        >
    </EditText>

    <Button
        android:id="@+id/subBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>
</LinearLayout>