<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">
    
    <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >



        <TextView
            android:id="@+id/titleView"
            style="@style/white20Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="找回密码"
            android:gravity="center"
       	    android:layout_gravity="center" />


        
    </FrameLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请输入您要找回密码的账号:"
            android:layout_marginTop="20dp"
            />
        
    <EditText
        android:id="@+id/nameText"
        style="@style/input"
        android:drawableLeft="@drawable/login_account_icon"
        android:layout_marginTop="5dp"
        android:drawablePadding="2dp"
        android:hint="@string/register_name" />

    
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请输入您注册时留的邮箱:"
            android:layout_marginTop="20dp"
            />
    <EditText
        android:id="@+id/emailText"
        style="@style/input"
        android:drawableLeft="@drawable/icon_email"
        android:layout_marginTop="5dp"
        android:drawablePadding="2dp"
        android:inputType="textEmailAddress"
        android:hint="@string/register_email" />


    <Button
        android:id="@+id/subBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>
</LinearLayout>