<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/white_bg"
            android:layout_width="wrap_content"
            android:orientation="vertical" >

            <LinearLayout style="@style/part_linear"
                android:id="@+id/headLayout" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/image_icon" />

                
         		 <com.d3.d3xmpp.util.CircularImage
                    android:id="@+id/headView"
                    android:layout_width="100dp"
                    android:layout_height="100dp" 
           			android:scaleType="fitXY"/>
            </LinearLayout>
            
             <include layout="@layout/line" />

            <LinearLayout style="@style/part_linear" 
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/usernameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
            </LinearLayout>

            <include layout="@layout/line" />

            
            <LinearLayout style="@style/part_linear"
                android:id="@+id/nameLayout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/surname" />

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout style="@style/part_linear"
                android:id="@+id/emailLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/emailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout style="@style/part_linear" 
                android:id="@+id/phoneLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phoneView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />
            
            <LinearLayout style="@style/part_linear" 
                android:id="@+id/adrLayout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adr" />

                <TextView
                    android:id="@+id/adrView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout> 

            <include layout="@layout/line" />

            <LinearLayout style="@style/part_linear" 
                android:id="@+id/pwdLayout">

                <TextView
                    android:id="@+id/tv_me_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_password" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:id="@+id/sexLayout"
                style="@style/part_linear" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/sexView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:id="@+id/signLayout"
                style="@style/part_linear" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signature" />

                <TextView
                    android:id="@+id/signView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fill"
                    android:textColor="@color/dark_grey"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/arrow_right" />
            </LinearLayout>

            <include layout="@layout/line" />
        </LinearLayout>

        <Button
            android:id="@+id/exitBtn"
            style="@style/white20Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:text="@string/exit" />
    </LinearLayout>
        
    
    <LinearLayout
        	android:id="@+id/changeAdrLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:visibility="gone" >
        
        
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:orientation="horizontal" >

        <com.d3.d3xmpp.util.wheel.WheelView
            android:id="@+id/id_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.d3.d3xmpp.util.wheel.WheelView
            android:id="@+id/id_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.d3.d3xmpp.util.wheel.WheelView
            android:id="@+id/id_district"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/sureBtn"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="确定"
        android:textColor="#000000" />
        
    </LinearLayout>
    
    
    <LinearLayout 
        	android:id="@+id/changeLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white"
            android:visibility="gone"
            >
        
        <TextView 
            android:id="@+id/changeNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改"
            android:layout_gravity="center_horizontal"
            />
            
        <EditText
            android:id="@+id/changeText"
            style="@style/input"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="2dp"/>
        
        <RadioGroup 
            android:id="@+id/sexGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            
            <RadioButton 
                android:id="@+id/manRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:checked="true"
                />
            
             <RadioButton 
                android:id="@+id/womanRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
                />
        </RadioGroup>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
        <Button
            android:id="@+id/subBtn"
            style="@style/white20Text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn"
            android:text="@string/submit" />
            
         <Button
            android:id="@+id/cancelBtn"
            style="@style/white20Text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn"
            android:text="@string/cancel" />
        </LinearLayout>
           
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:visibility="invisible"
            />
            
        </LinearLayout>
    </RelativeLayout>

</ScrollView>